--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,10 +22,17 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 ## MULTIPART (MultipartProperties)
 # Enable multipart uploads
-spring.servlet.multippart.enabled=true;
+spring.servlet.multipart.enabled = true
 # Threshold after which files are written to disk.
-spring.servlet.multipart.file-size-threshold=2kb
+#spring.servlet.multipart.file-size-threshold=2kb
 # Max file size.
-spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.max-file-size = 1024MB
 # Max Request Size
-spring.servlet.multipart.max-request-size=215MB
+spring.servlet.multipart.max-request-size = 1024MB
+
+server.tomcat.max-http-post-size = -1
+
+
+## File Storage Properties
+# All files uploaded through the API will be stored in this directory
+#file.upload-dir=C:/Users/Brent/lc101/LC-Liftoff/image_uploads
